// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storybook Tests react/Modal BackgroundScroll 1`] = `
<div
  data-dark={false}
>
  <div
    aria-hidden={null}
    data-overlay-container={true}
  >
    <div
      style={
        Object {
          "height": 1024,
        }
      }
    >
      <button
        className="charcoal-button"
        onClick={[Function]}
      >
        Open Modal
      </button>
    </div>
    <div
      className="charcoal-modal-background"
      data-bottom-sheet={false}
      onClick={[Function]}
      onPointerDown={[Function]}
      style={
        Object {
          "zIndex": 10,
        }
      }
    >
      <div
        className="charcoal-modal-dialog"
        data-bottom-sheet={false}
        onKeyDown={[Function]}
        role="dialog"
        style={Object {}}
        tabIndex={-1}
      >
        <div
          className="charcoal-modal-header-root"
          data-bottom-sheet={false}
        >
          <div
            className="charcoal-modal-header-title"
          >
            react/Title
          </div>
        </div>
        <div
          className="charcoal-modal-body"
        >
          <div
            style={
              Object {
                "display": "grid",
                "gap": 24,
              }
            }
          >
            <div
              style={
                Object {
                  "color": "var(--charcoal-text2)",
                  "fontSize": 14,
                  "lineHeight": 22,
                }
              }
            >
              Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod placeat tenetur, necessitatibus laudantium cumque exercitationem provident. Quaerat iure enim, eveniet dolores earum odio quo possimus fugiat aspernatur, numquam, commodi repellat.
            </div>
            <div
              className="charcoal-modal-align"
            >
              <div
                aria-disabled={false}
                className="charcoal-text-field-root"
              >
                <div
                  className="charcoal-field-label-root"
                >
                  <label
                    className="charcoal-field-label"
                    htmlFor="test-id"
                    id="test-id"
                  >
                    Name
                  </label>
                  <div
                    className="charcoal-field-label-sub-label"
                  >
                    <span />
                  </div>
                </div>
                <div
                  className="charcoal-text-field-container"
                  data-invalid={false}
                >
                  <input
                    aria-labelledby="test-id"
                    className="charcoal-text-field-input"
                    data-invalid={false}
                    disabled={false}
                    id="test-id"
                    onChange={[Function]}
                    placeholder="Nagisa"
                    type="text"
                  />
                </div>
              </div>
            </div>
            <div
              className="charcoal-modal-align"
            >
              <div
                aria-disabled={false}
                className="charcoal-text-field-root"
              >
                <div
                  className="charcoal-field-label-root"
                >
                  <label
                    className="charcoal-field-label"
                    htmlFor="test-id"
                    id="test-id"
                  >
                    Country
                  </label>
                  <div
                    className="charcoal-field-label-sub-label"
                  >
                    <span />
                  </div>
                </div>
                <div
                  className="charcoal-text-field-container"
                  data-invalid={false}
                >
                  <input
                    aria-labelledby="test-id"
                    autoFocus={true}
                    className="charcoal-text-field-input"
                    data-invalid={false}
                    disabled={false}
                    id="test-id"
                    onChange={[Function]}
                    placeholder="Tokyo"
                    type="text"
                  />
                </div>
              </div>
            </div>
            <div
              className="charcoal-modal-align"
            >
              <div
                className="charcoal-dropdown-selector-root"
              >
                <div
                  className="charcoal-field-label-root"
                >
                  <label
                    className="charcoal-field-label"
                    id="test-id"
                  >
                    Fruits
                  </label>
                  <div
                    className="charcoal-field-label-sub-label"
                  >
                    <span />
                  </div>
                </div>
                <div
                  aria-hidden="true"
                  style={
                    Object {
                      "border": 0,
                      "clip": "rect(0 0 0 0)",
                      "clipPath": "inset(50%)",
                      "height": "1px",
                      "margin": "-1px",
                      "overflow": "hidden",
                      "padding": 0,
                      "position": "absolute",
                      "whiteSpace": "nowrap",
                      "width": "1px",
                    }
                  }
                >
                  <select
                    onChange={[Function]}
                    tabIndex={-1}
                    value="10"
                  >
                    <option
                      value="10"
                    >
                      10
                    </option>
                    <option
                      value="20"
                    >
                      20
                    </option>
                    <option
                      value="30"
                    >
                      30
                    </option>
                  </select>
                </div>
                <button
                  aria-labelledby="test-id"
                  className="charcoal-dropdown-selector-button"
                  data-active={false}
                  onClick={[Function]}
                  type="button"
                >
                  <span
                    className="charcoal-ui-dropdown-selector-text"
                    data-placeholder={false}
                  >
                    Apple
                  </span>
                  <pixiv-icon
                    class="charcoal-ui-dropdown-selector-icon"
                    name="16/Menu"
                  />
                </button>
              </div>
            </div>
          </div>
          <div
            className="charcoal-modal-buttons"
          >
            <button
              className="charcoal-button"
              data-full-width={true}
              data-variant="Primary"
              onClick={[Function]}
            >
              Apply
            </button>
            <button
              className="charcoal-button"
              data-full-width={true}
              onClick={[Function]}
            >
              Cancel
            </button>
          </div>
        </div>
        <button
          aria-label="Close"
          className="charcoal-icon-button charcoal-modal-close-button"
          data-active={false}
          data-size="S"
          data-variant="Default"
          onClick={[Function]}
          type="button"
        >
          <pixiv-icon
            name="24/Close"
          />
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storybook Tests react/Modal BottomSheet 1`] = `
<div
  data-dark={false}
>
  <div
    aria-hidden={null}
    data-overlay-container={true}
  >
    <button
      className="charcoal-button"
      onClick={[Function]}
    >
      Open Modal
    </button>
    <div
      className="charcoal-modal-background"
      data-bottom-sheet={true}
      onClick={[Function]}
      onPointerDown={[Function]}
      style={
        Object {
          "zIndex": 10,
        }
      }
    >
      <div
        className="charcoal-modal-dialog"
        data-bottom-sheet={true}
        onKeyDown={[Function]}
        role="dialog"
        style={Object {}}
        tabIndex={-1}
      >
        <div
          className="charcoal-modal-header-root"
          data-bottom-sheet={true}
        >
          <div
            className="charcoal-modal-header-title"
          >
            react/Title
          </div>
        </div>
        <div
          className="charcoal-modal-body"
        >
          <div
            style={
              Object {
                "display": "grid",
                "gap": 24,
              }
            }
          >
            <div
              style={
                Object {
                  "color": "var(--charcoal-text2)",
                  "fontSize": 14,
                  "lineHeight": 22,
                }
              }
            >
              Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod placeat tenetur, necessitatibus laudantium cumque exercitationem provident. Quaerat iure enim, eveniet dolores earum odio quo possimus fugiat aspernatur, numquam, commodi repellat.
            </div>
          </div>
          <div
            className="charcoal-modal-buttons"
          >
            <button
              className="charcoal-button"
              data-full-width={true}
              data-variant="Danger"
              onClick={[Function]}
            >
              削除する
            </button>
            <button
              className="charcoal-button"
              data-full-width={true}
              onClick={[Function]}
            >
              キャンセル
            </button>
          </div>
        </div>
        <button
          aria-label="Close"
          className="charcoal-icon-button charcoal-modal-close-button"
          data-active={false}
          data-size="S"
          data-variant="Default"
          onClick={[Function]}
          type="button"
        >
          <pixiv-icon
            name="24/Close"
          />
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storybook Tests react/Modal Default 1`] = `
<div
  data-dark={false}
>
  <div
    aria-hidden={null}
    data-overlay-container={true}
  >
    <button
      className="charcoal-button"
      onClick={[Function]}
    >
      Open Modal
    </button>
    <div
      className="charcoal-modal-background"
      data-bottom-sheet={false}
      onClick={[Function]}
      onPointerDown={[Function]}
      style={
        Object {
          "zIndex": 10,
        }
      }
    >
      <div
        className="charcoal-modal-dialog"
        data-bottom-sheet={false}
        onKeyDown={[Function]}
        role="dialog"
        style={Object {}}
        tabIndex={-1}
      >
        <div
          className="charcoal-modal-header-root"
          data-bottom-sheet={false}
        >
          <div
            className="charcoal-modal-header-title"
          >
            react/Title
          </div>
        </div>
        <div
          className="charcoal-modal-body"
        >
          <div
            style={
              Object {
                "display": "grid",
                "gap": 24,
              }
            }
          >
            <div
              style={
                Object {
                  "color": "var(--charcoal-text2)",
                  "fontSize": 14,
                  "lineHeight": 22,
                }
              }
            >
              Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod placeat tenetur, necessitatibus laudantium cumque exercitationem provident. Quaerat iure enim, eveniet dolores earum odio quo possimus fugiat aspernatur, numquam, commodi repellat.
            </div>
            <div
              className="charcoal-modal-align"
            >
              <div
                aria-disabled={false}
                className="charcoal-text-field-root"
              >
                <div
                  className="charcoal-field-label-root"
                >
                  <label
                    className="charcoal-field-label"
                    htmlFor="test-id"
                    id="test-id"
                  >
                    Name
                  </label>
                  <div
                    className="charcoal-field-label-sub-label"
                  >
                    <span />
                  </div>
                </div>
                <div
                  className="charcoal-text-field-container"
                  data-invalid={false}
                >
                  <input
                    aria-labelledby="test-id"
                    className="charcoal-text-field-input"
                    data-invalid={false}
                    disabled={false}
                    id="test-id"
                    onChange={[Function]}
                    placeholder="Nagisa"
                    type="text"
                  />
                </div>
              </div>
            </div>
            <div
              className="charcoal-modal-align"
            >
              <div
                aria-disabled={false}
                className="charcoal-text-field-root"
              >
                <div
                  className="charcoal-field-label-root"
                >
                  <label
                    className="charcoal-field-label"
                    htmlFor="test-id"
                    id="test-id"
                  >
                    Country
                  </label>
                  <div
                    className="charcoal-field-label-sub-label"
                  >
                    <span />
                  </div>
                </div>
                <div
                  className="charcoal-text-field-container"
                  data-invalid={false}
                >
                  <input
                    aria-labelledby="test-id"
                    autoFocus={true}
                    className="charcoal-text-field-input"
                    data-invalid={false}
                    disabled={false}
                    id="test-id"
                    onChange={[Function]}
                    placeholder="Tokyo"
                    type="text"
                  />
                </div>
              </div>
            </div>
            <div
              className="charcoal-modal-align"
            >
              <div
                className="charcoal-dropdown-selector-root"
              >
                <div
                  className="charcoal-field-label-root"
                >
                  <label
                    className="charcoal-field-label"
                    id="test-id"
                  >
                    Fruits
                  </label>
                  <div
                    className="charcoal-field-label-sub-label"
                  >
                    <span />
                  </div>
                </div>
                <div
                  aria-hidden="true"
                  style={
                    Object {
                      "border": 0,
                      "clip": "rect(0 0 0 0)",
                      "clipPath": "inset(50%)",
                      "height": "1px",
                      "margin": "-1px",
                      "overflow": "hidden",
                      "padding": 0,
                      "position": "absolute",
                      "whiteSpace": "nowrap",
                      "width": "1px",
                    }
                  }
                >
                  <select
                    onChange={[Function]}
                    tabIndex={-1}
                    value="10"
                  >
                    <option
                      value="10"
                    >
                      10
                    </option>
                    <option
                      value="20"
                    >
                      20
                    </option>
                    <option
                      value="30"
                    >
                      30
                    </option>
                  </select>
                </div>
                <button
                  aria-labelledby="test-id"
                  className="charcoal-dropdown-selector-button"
                  data-active={false}
                  onClick={[Function]}
                  type="button"
                >
                  <span
                    className="charcoal-ui-dropdown-selector-text"
                    data-placeholder={false}
                  >
                    Apple
                  </span>
                  <pixiv-icon
                    class="charcoal-ui-dropdown-selector-icon"
                    name="16/Menu"
                  />
                </button>
              </div>
            </div>
          </div>
          <div
            className="charcoal-modal-buttons"
          >
            <button
              className="charcoal-button"
              data-full-width={true}
              data-variant="Primary"
              onClick={[Function]}
            >
              Apply
            </button>
            <button
              className="charcoal-button"
              data-full-width={true}
              onClick={[Function]}
            >
              Cancel
            </button>
          </div>
        </div>
        <button
          aria-label="Close"
          className="charcoal-icon-button charcoal-modal-close-button"
          data-active={false}
          data-size="S"
          data-variant="Default"
          onClick={[Function]}
          type="button"
        >
          <pixiv-icon
            name="24/Close"
          />
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storybook Tests react/Modal FullBottomSheet 1`] = `
<div
  data-dark={false}
>
  <div
    aria-hidden={null}
    data-overlay-container={true}
  >
    <button
      className="charcoal-button"
      onClick={[Function]}
    >
      Open Modal
    </button>
    <div
      className="charcoal-modal-background"
      data-bottom-sheet="full"
      onClick={[Function]}
      onPointerDown={[Function]}
      style={
        Object {
          "zIndex": 10,
        }
      }
    >
      <div
        className="charcoal-modal-dialog"
        data-bottom-sheet="full"
        onKeyDown={[Function]}
        role="dialog"
        style={Object {}}
        tabIndex={-1}
      >
        <div
          className="charcoal-modal-header-root"
          data-bottom-sheet="full"
        >
          <div
            className="charcoal-modal-header-title"
          >
            react/Title
          </div>
        </div>
        <div
          className="charcoal-modal-body"
        >
          <div
            style={
              Object {
                "display": "grid",
                "gap": 24,
              }
            }
          >
            <div
              style={
                Object {
                  "color": "var(--charcoal-text2)",
                  "fontSize": 14,
                  "lineHeight": 22,
                }
              }
            >
              Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod placeat tenetur, necessitatibus laudantium cumque exercitationem provident. Quaerat iure enim, eveniet dolores earum odio quo possimus fugiat aspernatur, numquam, commodi repellat.
            </div>
            <div
              className="charcoal-modal-align"
            >
              <div
                aria-disabled={false}
                className="charcoal-text-field-root"
              >
                <div
                  className="charcoal-field-label-root"
                >
                  <label
                    className="charcoal-field-label"
                    htmlFor="test-id"
                    id="test-id"
                  >
                    Name
                  </label>
                  <div
                    className="charcoal-field-label-sub-label"
                  >
                    <span />
                  </div>
                </div>
                <div
                  className="charcoal-text-field-container"
                  data-invalid={false}
                >
                  <input
                    aria-labelledby="test-id"
                    className="charcoal-text-field-input"
                    data-invalid={false}
                    disabled={false}
                    id="test-id"
                    onChange={[Function]}
                    placeholder="Nagisa"
                    type="text"
                  />
                </div>
              </div>
            </div>
            <div
              className="charcoal-modal-align"
            >
              <div
                aria-disabled={false}
                className="charcoal-text-field-root"
              >
                <div
                  className="charcoal-field-label-root"
                >
                  <label
                    className="charcoal-field-label"
                    htmlFor="test-id"
                    id="test-id"
                  >
                    Country
                  </label>
                  <div
                    className="charcoal-field-label-sub-label"
                  >
                    <span />
                  </div>
                </div>
                <div
                  className="charcoal-text-field-container"
                  data-invalid={false}
                >
                  <input
                    aria-labelledby="test-id"
                    className="charcoal-text-field-input"
                    data-invalid={false}
                    disabled={false}
                    id="test-id"
                    onChange={[Function]}
                    placeholder="Tokyo"
                    type="text"
                  />
                </div>
              </div>
            </div>
          </div>
          <div
            className="charcoal-modal-buttons"
          >
            <button
              className="charcoal-button"
              data-full-width={true}
              data-variant="Primary"
              onClick={[Function]}
            >
              Apply
            </button>
            <button
              className="charcoal-button"
              data-full-width={true}
              onClick={[Function]}
            >
              Cancel
            </button>
          </div>
        </div>
        <button
          aria-label="Close"
          className="charcoal-icon-button charcoal-modal-close-button"
          data-active={false}
          data-size="S"
          data-variant="Default"
          onClick={[Function]}
          type="button"
        >
          <pixiv-icon
            name="24/Close"
          />
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storybook Tests react/Modal NotDismmissableStory 1`] = `
<div
  data-dark={false}
>
  <div
    aria-hidden={null}
    data-overlay-container={true}
  >
    <button
      className="charcoal-button"
      onClick={[Function]}
    >
      Open Modal
    </button>
    <div
      className="charcoal-modal-background"
      data-bottom-sheet={false}
      onClick={[Function]}
      onPointerDown={[Function]}
      style={
        Object {
          "zIndex": 10,
        }
      }
    >
      <div
        className="charcoal-modal-dialog"
        data-bottom-sheet={false}
        onKeyDown={[Function]}
        role="dialog"
        style={Object {}}
        tabIndex={-1}
      >
        <div
          className="charcoal-modal-header-root"
          data-bottom-sheet={false}
        >
          <div
            className="charcoal-modal-header-title"
          >
            react/Title
          </div>
        </div>
        <div
          className="charcoal-modal-body"
        >
          <div
            style={
              Object {
                "display": "grid",
                "gap": 24,
              }
            }
          >
            <div
              style={
                Object {
                  "color": "var(--charcoal-text2)",
                  "fontSize": 14,
                  "lineHeight": 22,
                }
              }
            >
              Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod placeat tenetur, necessitatibus laudantium cumque exercitationem provident. Quaerat iure enim, eveniet dolores earum odio quo possimus fugiat aspernatur, numquam, commodi repellat.
            </div>
          </div>
          <div
            className="charcoal-modal-buttons"
          >
            <button
              className="charcoal-button"
              data-full-width={true}
              data-variant="Primary"
              onClick={[Function]}
            >
              OK
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
